feat: alterando versão do java para 8